--- a/BROADCASTRECEICER/src/main/AndroidManifest.xml
+++ b/BROADCASTRECEICER/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
                 <action android:name="haha1"></action>
             </intent-filter>
         </receiver>
+
+        <receiver
+            android:name=".MyReceiver2"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="haha1"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
